@@ -21,7 +21,7 @@ We hope to have tutorial-style examples available in the near future.
 In order to use features from the Real-Time CORBA 1.0 specification in
 TAO, a RT-CORBA client application must link with the RTCORBA library;
 a RT-CORBA server application must link with the RTCORBA library and the
-RTPortbaleServer libraries. Since some features in RT-CORBA depend on the
+RTPortableServer libraries. Since some features in RT-CORBA depend on the
 messaging specification, all code must be compiled with <tt>TAO_HAS_CORBA_MESSAGING</tt>
 set to
 <tt>1</tt>. This macros are defined in
